--- a/poll_project/poll/templates/poll/home.html
+++ b/poll_project/poll/templates/poll/home.html
@@ -19,7 +19,7 @@
                         <span class="pull-right">    
                             No.Votes: <b>{{poll.total }}</b>          
                             <a style="margin-left: 5px" href="{% url "vote" poll.id %}" class="btn btn-info btn-xs">Vote</a> &nbsp;
-                            <a href="{% url "result" poll.id %}" class="btn btn-default btn-xs">View Results</a> &nbsp;
+                            <a href="{% url "results" poll.id %}" class="btn btn-default btn-xs">View Results</a> &nbsp;
                         </span>
                     </li>
                     {% endfor %}
