--- a/poll_project/poll/templates/poll/home.html
+++ b/poll_project/poll/templates/poll/home.html
@@ -6,6 +6,14 @@
 <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
         <div class="panel panel-default">
+            {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+
             <div class="panel-heading">
                 <h3 class="panel-title">Available Polls <strong>{{ polls.count }}</strong></h3>
             </div>
